--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,41 @@
 .income{
-display: block;
+    display: grid;
+    justify-content: center;
+}
+ img{
+    width: 100%;
+    height: 100%;
+ }
+.btn{
+    text-decoration: none;
+    background-color: #59A5FF;
+    color: white;
+    font-weight: 700;
+    padding: 10px 30px;
+    border-radius: 5px;
+    font-size: 18px;
+    justify-items: center;
 }
 
 input{
     width: 30%;
+}
+.expenses{
+    display: grid;
+    justify-content: center;
+}
+
+.notify {
+    color: #fff;
+    text-align: center;
+    margin: 0 auto;
+    background: #222436;
+    margin-top: 20px;
+    border-radius: 15px;
+    padding: 5px 20px;
+    display: none;
+}
+.notify-section{
+    width: 35%;
+    margin: 0 auto;
 }
