--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@
     display: grid;
     justify-content: center;
 }
+.expenses{
+    display: grid;
+    justify-content: center;
+}
+
  img{
     width: 100%;
     height: 100%;
@@ -18,11 +23,10 @@
 }
 
 input{
-    width: 30%;
-}
-.expenses{
-    display: grid;
-    justify-content: center;
+    width: 40%;
+    border: 1px solid gray;
+    border-radius: 5px;
+    margin-left: 250px;
 }
 
 .notify {
